package designpatterns.decorator;

public interface Weapon {
    String attack();
}
